--- a/src/frontend/destination_search/templates/list.html
+++ b/src/frontend/destination_search/templates/list.html
@@ -10,27 +10,56 @@ Results
 <!--- Forms -->
 <div class="filters-container">
   <form method="get" id="listForm" onsubmit="submitForm(event);">
-    <div class="form-group question-box">
-        <label for="{{ travellers_input_form.start_location.id_for_label }}">{{ travellers_input_form.start_location.help_text }}</label>
-        {{ travellers_input_form.start_location.errors }}
-        {{ travellers_input_form.start_location.as_widget }}
-        {{ travellers_input_form.start_location_lat.as_widget }}
-        {{ travellers_input_form.start_location_lon.as_widget }}
+    <div class="form-group">
+      <div class="tooltip-container">
+        <label class="form-label" for="{{ travellers_input_form.start_location.id_for_label }}">
+          {{ travellers_input_form.start_location.label }}
+        </label>
+        <span class="info-icon" onclick="showHelpText(event, 'start_location_help_text')">
+          <i class="fas fa-info-circle"></i>
+        </span>
+        <div id="start_location_help_text" class="form-help-text-infobox">
+          {{ travellers_input_form.start_location.help_text }}
+        </div>
+      </div>
+      {{ travellers_input_form.start_location.errors }}
+      {{ travellers_input_form.start_location.as_widget }}
+      {{ travellers_input_form.start_location_lat.as_widget }}
+      {{ travellers_input_form.start_location_lon.as_widget }}
     </div>
-    <div class="form-group question-box">
-        <label for="{{ travellers_input_form.start_date.id_for_label }}">{{ travellers_input_form.start_date.help_text }}</label>
-        <input type="text" id="date_range" placeholder="Select start and end date...">
-        {{ travellers_input_form.start_date.errors }}
-        {{ travellers_input_form.start_date.as_widget }}
-        {{ travellers_input_form.end_date.errors }}
-        {{ travellers_input_form.end_date.as_widget }}
+    <div class="form-group">
+      <div class="tooltip-container">
+        <label class="form-label" for="{{ travellers_input_form.start_date.id_for_label }}">
+          {{ travellers_input_form.start_date.label }}
+        </label>
+        <span class="info-icon" onclick="showHelpText(event, 'start_date_help_text')">
+          <i class="fas fa-info-circle"></i>
+        </span>
+        <div id="start_date_help_text" class="form-help-text-infobox">
+          {{ travellers_input_form.start_date.help_text }}
+        </div>
+      </div>
+      <input type="text" class="input-box" id="date_range" placeholder="Select start and end date...">
+      {{ travellers_input_form.start_date.errors }}
+      {{ travellers_input_form.start_date.as_widget }}
+      {{ travellers_input_form.end_date.errors }}
+      {{ travellers_input_form.end_date.as_widget }}
     </div>
-    <div class="form-group question-box">
-        <label for="{{ travellers_input_form.previous_locations.id_for_label }}">{{ travellers_input_form.previous_locations.help_text }}</label>
-        {{ travellers_input_form.previous_locations.errors }}
-        {{ travellers_input_form.previous_locations.as_widget }}
+    <div class="form-group">
+      <div class="tooltip-container">
+        <label class="form-label" for="{{ travellers_input_form.previous_locations.id_for_label }}">
+          {{ travellers_input_form.previous_locations.label }}
+        </label>
+        <span class="info-icon" onclick="showHelpText(event, 'previous_locations_help_text')">
+          <i class="fas fa-info-circle"></i>
+        </span>
+        <div id="previous_locations_help_text" class="form-help-text-infobox">
+          {{ travellers_input_form.previous_locations.help_text }}
+        </div>
+      </div>
+      {{ travellers_input_form.previous_locations.errors }}
+      {{ travellers_input_form.previous_locations.as_widget }}
     </div>
-
     {% for field in filters_form %}
         {{ field.errors }}
         {{ field }}
