--- a/src/frontend/destination_search/templates/base.html
+++ b/src/frontend/destination_search/templates/base.html
@@ -26,7 +26,7 @@
     <div class="page">
 
         <!--- Header -->
-        <div class="header-container">
+        <div class="header-container" id="headerContainer">
             <div class="header-content-container content-container">
                 {% block header %}
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -68,7 +68,7 @@
         </div>
 
         <!--- Main part -->
-        <div class="main-container content-container">
+        <div class="main-container content-container" id="mainContent">
             {% block main %}{% endblock %}
         </div>
 
